# tech-cookbook

./: .gitmodules  README.md
Algorithms/Introduction-to-Algorithms/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  sorting_algorithm.cpp  sorting_algorithm.hpp
Algorithms/Introduction-to-Algorithms/chapter2/: chapter2.hpp  insertion_sort.hpp
Algorithms/Introduction-to-Algorithms/data-structures/: bst.hpp  linked_list.hpp  queue.hpp  rb_tree.hpp  stack.hpp
Algorithms/Introduction-to-Algorithms/divide-and-conquer/: maximum_subarray.hpp
Algorithms/Introduction-to-Algorithms/dynamic-programming/: cut_rod.hpp  longest_common_subsequence.hpp
Algorithms/Introduction-to-Algorithms/greedy/: greedy_activity_selector.hpp  huffman.hpp
Algorithms/Introduction-to-Algorithms/heap/: heap.hpp
Algorithms/Introduction-to-Algorithms/matrix/: matrix_multiply.hpp
Algorithms/Introduction-to-Algorithms/searching/: binary_search.hpp
Algorithms/Introduction-to-Algorithms/sorting/: bubble_sort.hpp  counting_sort.hpp  demo_sorting.hpp  heap_sort.hpp  insertion_sort.hpp  merge_sort.hpp  merge_sort_improved.hpp  quicksort.hpp  randomized_quicksort.hpp  sorting_algorithm.hpp
Algorithms/Introduction-to-Algorithms/utils/: time_tracker.hpp
Algorithms/ai-for-games-book/: .gitignore  CMakeLists.txt  LICENSE  README.md  algorithm_runner.hpp  allegro.cpp  allegro.hpp  main.cpp  setup-thirdparty.sh
Algorithms/ai-for-games-book/allegro_common/: allegro.cpp  allegro.hpp
Algorithms/ai-for-games-book/common/: vector2d.cpp  vector2d.hpp
Algorithms/ai-for-games-book/kinematic/: align.cpp  align.hpp  arrive.cpp  arrive.hpp  arrive_dynamic.cpp  arrive_dynamic.hpp  kinematic_common.cpp  kinematic_common.hpp  kinematic_data.cpp  kinematic_data.hpp  seek.cpp  seek.hpp  seek_dynamic.cpp  seek_dynamic.hpp  wander.cpp  wander.hpp
C++/Boost/Asio/: CMakeLists.txt  README.md  conanfile.py  linux_x86_64  main.cpp
C++/Boost/Geometry/: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
C++/Cpp-14/: CMakeLists.txt  main.cpp
C++/Cpp-17/: CMakeLists.txt  main.cpp
C++/Cpp-17/test_dir/: hello.txt
C++/Cpp-20/: .gitignore  CMakeLists.txt  README.md  consteval_and_constinit.cpp  consteval_and_constinit.hpp  constraints_concepts.cpp  constraints_concepts.hpp  coroutine.cpp  coroutine.hpp  designated_initializer.cpp  designated_initializer.hpp  init_statement_initializer_ranged_for.cpp  init_statement_initializer_ranged_for.hpp  likely_unlikely.cpp  likely_unlikely.hpp  main.cpp  three_way_comparison.cpp  three_way_comparison.hpp
C++/Cpp-Cmake-Structure-For-Mock/classes/: CMakeLists.txt
C++/Cpp-Concurrency-In-Action/: CMakeLists.txt  README.md
C++/Cpp-Concurrency-In-Action/chapter1/: CMakeLists.txt  main.cpp
C++/Cpp-Concurrency-In-Action/chapter2/: 2_1.cpp  2_2.cpp  2_3.cpp  2_6.cpp  2_7.cpp  2_9.cpp  CMakeLists.txt  main.cpp  worker.hpp
C++/Cpp-Concurrency-In-Action/chapter3/: 3_1.cpp  3_4_5.cpp  3_7_and_8.cpp
C++/Cpp-Libraries-Without-Package-Manager/: CMakeLists.txt  README.md  main.cpp
C++/Cpp-Libraries-Without-Package-Manager/test/: CMakeLists.txt  simpleTest.cpp
C++/Cpp-Templates-Second-Edition/: CMakeLists.txt  README.md  main.cpp
C++/Cpp-Templates-Second-Edition/Chapter1/: CMakeLists.txt  main.cpp
C++/Cpp-Templates-Second-Edition/basics/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/bridge/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/chapter1/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/chapter2/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/chapters/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/common/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/debugging/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/details/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/inherit/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/poly/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/traits/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/tuples/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/typelist/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/typeoverload/: CMakeLists.txt
C++/Cpp-Templates-Second-Edition/variant/: CMakeLists.txt
C++/LearnOpenGL/: .gitignore  CMakeLists.txt  CMakeSettings.json  camera.cpp  camera.hpp  conanfile.py  coordinates.cpp  coordinates.hpp  coordinates_container_rotating.cpp  coordinates_container_rotating.hpp  hello_triangle.cpp  hello_triangle.hpp  hello_triangle_two_triangles.cpp  hello_triangle_two_triangles.hpp  hello_triangle_two_triangles_different_buffers.cpp  hello_triangle_two_triangles_different_buffers.hpp  hello_triangle_two_triangles_different_shaders.cpp  hello_triangle_two_triangles_different_shaders.hpp  main.cpp  shaders.cpp  shaders.hpp  shaders_color_as_position.cpp  shaders_color_as_position.hpp  shaders_horizontal_offset.cpp  shaders_horizontal_offset.hpp  shaders_triangle_upside_down.cpp  shaders_triangle_upside_down.hpp  textures.cpp  textures.hpp  textures_centric.cpp  textures_centric.hpp  textures_experiments.cpp  textures_experiments.hpp  textures_face_reversed.cpp  textures_face_reversed.hpp  textures_visibility_manipulation.cpp  textures_visibility_manipulation.hpp  transformations.cpp  transformations.hpp  transformations_second_container.cpp  (+1 more)
C++/LearnOpenGL/conan_profiles/: linux_x86_64
C++/OpenGL-ExpertBook/chapter2/: CMakeLists.txt  chapter2.cpp  chapter2.hpp
C++/SDL-LazyFoo/: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
C++/SDL-LazyFoo/SDL2-2.0.20/: sdl2-config.cmake
C++/SDL-LazyFoo/lesson1/: lesson1.hpp
C++/SDL-LazyFoo/lesson10/: lesson10.hpp  texture.hpp
C++/SDL-LazyFoo/lesson11/: CMakeLists.txt
C++/SDL-LazyFoo/lesson12/: CMakeLists.txt
C++/SDL-LazyFoo/lesson13/: CMakeLists.txt
C++/SDL-LazyFoo/lesson14/: CMakeLists.txt
C++/SDL-LazyFoo/lesson15/: CMakeLists.txt
C++/SDL-LazyFoo/lesson16/: CMakeLists.txt
C++/SDL-LazyFoo/lesson17/: CMakeLists.txt
C++/Tracy/: CMakeLists.txt  README.md  main.cpp
Docker/SimpleCppSetup/: CMakeLists.txt  Dockerfile  conanfile.py  main.cpp
Embedded/: .gitignore
(+781 files in other folders)
